# ml-tensorflow

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  create_ml_issues.sh  dev.sh  pyproject.toml  setup.sh
.run/: clean.run.xml  down.run.xml  help.run.xml  shell.run.xml  start.run.xml  up.run.xml
ci/: checks.py  coverage.py  lint.py  mypy.ini
ci/configs/: .flake8  black.toml  isort.toml  mypy.ini  pyright.toml  pytest.toml
config/: config.yml  environment.yml  training.yml
configs/: environment.yml  model.yml  training.yml
docker/: Dockerfile  docker-compose.yml
src/: __init__.py  main.py
src/config/: __init__.py  config.py
src/data/processors/: batch_processor.py  dataset_scanner.py
src/model/: app.py  predict.py  train.py
src/settings/: __init__.py  config.py  logger.py  logging.py  tensorflow.py
src/training/: __init__.py  evaluate.py  evaluate.py~  train.py
src/utils/: __init__.py  save_model.py  versioning.py
src/utils/preprocessors/: image.py
tools/: lint.py
tools/configs/: black.toml  mypy.ini
